--- a/KinectFittingRoom/KinectFittingRoom/App.xaml
+++ b/KinectFittingRoom/KinectFittingRoom/App.xaml
@@ -8,6 +8,7 @@
             <viewModel:KinectViewModelLoader x:Key="KinectViewModelLoader"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/GlassButton.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/RoundButton.xaml"/>
                 <ResourceDictionary Source="Resources/Models/BirthdayHat.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
